// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getStrokePoints get stroke points from a array input points: get-stroke-points-array-pairs 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      0,
      0,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      -1,
      0,
    ],
  },
  Object {
    "distance": 16.666666666666668,
    "point": Array [
      16.666666666666668,
      0,
    ],
    "pressure": 0.5,
    "runningLength": 16.666666666666668,
    "vector": Array [
      -1,
      0,
    ],
  },
  Object {
    "distance": 8.09854429839625,
    "point": Array [
      23.61111111111111,
      4.166666666666667,
    ],
    "pressure": 0.5,
    "runningLength": 24.76521096506292,
    "vector": Array [
      -0.857492925712544,
      -0.5144957554275266,
    ],
  },
  Object {
    "distance": 5.369172918862592,
    "point": Array [
      28.935185185185183,
      4.861111111111111,
    ],
    "pressure": 0.5,
    "runningLength": 30.134383883925512,
    "vector": Array [
      -0.9916004111862218,
      -0.12933918406776795,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a line with a many points: get-stroke-points-many-points 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      -0.20210597826090293,
      0.08050271739131176,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      -0.34767586768518355,
      0.9376147881882807,
    ],
  },
  Object {
    "distance": 0.8351181581476027,
    "point": Array [
      0.08824445199271719,
      -0.7025164175724399,
    ],
    "pressure": 0.5,
    "runningLength": 0.8351181581476027,
    "vector": Array [
      -0.34767586768518355,
      0.9376147881882807,
    ],
  },
  Object {
    "distance": 2.0838718630349016,
    "point": Array [
      1.157250150966158,
      -2.4913005736714524,
    ],
    "pressure": 0.5,
    "runningLength": 2.918990021182504,
    "vector": Array [
      -0.5129901305047452,
      0.858394504877987,
    ],
  },
  Object {
    "distance": 2.4819084227295014,
    "point": Array [
      2.679058081093972,
      -4.451905083157172,
    ],
    "pressure": 0.5,
    "runningLength": 5.400898443912006,
    "vector": Array [
      -0.6131603874627218,
      0.7899584414680082,
    ],
  },
  Object {
    "distance": 4.422564406375479,
    "point": Array [
      5.687846226264727,
      -7.693242743139424,
    ],
    "pressure": 0.5,
    "runningLength": 9.823462850287484,
    "vector": Array [
      -0.6803265862750009,
      0.7329090912298769,
    ],
  },
  Object {
    "distance": 5.142389213158643,
    "point": Array [
      8.816887662201236,
      -11.774084140670425,
    ],
    "pressure": 0.5,
    "runningLength": 14.965852063446128,
    "vector": Array [
      -0.608480087024478,
      0.7935691423528789,
    ],
  },
  Object {
    "distance": 6.645418400300458,
    "point": Array [
      12.735516274061355,
      -17.14120026735924,
    ],
    "pressure": 0.5,
    "runningLength": 21.611270463746585,
    "vector": Array [
      -0.5896737234307095,
      0.8076415664732489,
    ],
  },
  Object {
    "distance": 11.28062967691421,
    "point": Array [
      18.83718189564005,
      -26.629207568690866,
    ],
    "pressure": 0.5,
    "runningLength": 32.891900140660795,
    "vector": Array [
      -0.540897609117135,
      0.8410884474604126,
    ],
  },
  Object {
    "distance": 11.365633541779717,
    "point": Array [
      25.49507325903751,
      -35.840619425687905,
    ],
    "pressure": 0.5,
    "runningLength": 44.25753368244051,
    "vector": Array [
      -0.58579148614314,
      0.8104618033949602,
    ],
  },
  Object {
    "distance": 12.40994309494819,
    "point": Array [
      32.34186203283761,
      -46.190893388574935,
    ],
    "pressure": 0.5,
    "runningLength": 56.6674767773887,
    "vector": Array [
      -0.5517179830250208,
      0.834030735169156,
    ],
  },
  Object {
    "distance": 13.111391235432444,
    "point": Array [
      39.268230268421206,
      -57.32345837574987,
    ],
    "pressure": 0.5,
    "runningLength": 69.77886801282115,
    "vector": Array [
      -0.5282710363234118,
      0.8490757988435359,
    ],
  },
  Object {
    "distance": 14.42373313584385,
    "point": Array [
      46.64857669432693,
      -69.71597887029256,
    ],
    "pressure": 0.5,
    "runningLength": 84.202601148665,
    "vector": Array [
      -0.5116807387100856,
      0.8591756640135364,
    ],
  },
  Object {
    "distance": 14.527674998922537,
    "point": Array [
      54.32494362529878,
      -82.04994545105646,
    ],
    "pressure": 0.5,
    "runningLength": 98.73027614758753,
    "vector": Array [
      -0.5283961082238678,
      0.8489979698526201,
    ],
  },
  Object {
    "distance": 15.198899773438125,
    "point": Array [
      62.16082604378788,
      -95.0732131303538,
    ],
    "pressure": 0.5,
    "runningLength": 113.92917592102566,
    "vector": Array [
      -0.5155558978146056,
      0.8568559483533833,
    ],
  },
  Object {
    "distance": 13.999991135929173,
    "point": Array [
      69.66171707853294,
      -106.8942277014884,
    ],
    "pressure": 0.5,
    "runningLength": 127.92916705695484,
    "vector": Array [
      -0.5357782702801144,
      0.8443587182564343,
    ],
  },
  Object {
    "distance": 9.922134398714828,
    "point": Array [
      74.8426542334889,
      -115.35629844230338,
    ],
    "pressure": 0.5,
    "runningLength": 137.85130145566967,
    "vector": Array [
      -0.5221595421673607,
      0.8528478249509537,
    ],
  },
  Object {
    "distance": 9.953030424329228,
    "point": Array [
      80.17153808389743,
      -123.76259438858546,
    ],
    "pressure": 0.5,
    "runningLength": 147.8043318799989,
    "vector": Array [
      -0.5354031509220132,
      0.8445966291566523,
    ],
  },
  Object {
    "distance": 9.16544025067673,
    "point": Array [
      84.9590492212568,
      -131.57828579103892,
    ],
    "pressure": 0.5,
    "runningLength": 156.96977213067564,
    "vector": Array [
      -0.5223438270743065,
      0.8527349683913324,
    ],
  },
  Object {
    "distance": 8.284018385676106,
    "point": Array [
      89.37331632529566,
      -138.58822206381774,
    ],
    "pressure": 0.5,
    "runningLength": 165.25379051635173,
    "vector": Array [
      -0.532865440239916,
      0.8461999897175139,
    ],
  },
  Object {
    "distance": 7.6606817095437165,
    "point": Array [
      94.00053513320833,
      -144.6935386287992,
    ],
    "pressure": 0.5,
    "runningLength": 172.91447222589545,
    "vector": Array [
      -0.6040218068514785,
      0.7969677890905473,
    ],
  },
  Object {
    "distance": 7.181193373981601,
    "point": Array [
      97.96749207981351,
      -150.67958831605523,
    ],
    "pressure": 0.5,
    "runningLength": 180.09566559987707,
    "vector": Array [
      -0.5524091526316478,
      0.8335731090245083,
    ],
  },
  Object {
    "distance": 8.081082809127732,
    "point": Array [
      102.30986181022423,
      -157.49484506047745,
    ],
    "pressure": 0.5,
    "runningLength": 188.1767484090048,
    "vector": Array [
      -0.5373499855125772,
      0.8433593499034877,
    ],
  },
  Object {
    "distance": 7.21813879798612,
    "point": Array [
      106.12419521828096,
      -163.62284541615423,
    ],
    "pressure": 0.5,
    "runningLength": 195.39488720699092,
    "vector": Array [
      -0.5284372488266553,
      0.848972363538717,
    ],
  },
  Object {
    "distance": 6.795063880433052,
    "point": Array [
      109.97188667945123,
      -169.2235742579036,
    ],
    "pressure": 0.5,
    "runningLength": 202.18995108742396,
    "vector": Array [
      -0.5662480189847835,
      0.8242349064410026,
    ],
  },
  Object {
    "distance": 5.093640451521141,
    "point": Array [
      113.05248653622667,
      -173.28006012276344,
    ],
    "pressure": 0.5,
    "runningLength": 207.2835915389451,
    "vector": Array [
      -0.6047933469382315,
      0.7963824505218909,
    ],
  },
  Object {
    "distance": 4.913462169610953,
    "point": Array [
      116.03557881897943,
      -177.18432329585755,
    ],
    "pressure": 0.5,
    "runningLength": 212.19705370855607,
    "vector": Array [
      -0.6071263357236686,
      0.7946053186776133,
    ],
  },
  Object {
    "distance": 4.694404885455845,
    "point": Array [
      118.6009236860833,
      -181.115791589182,
    ],
    "pressure": 0.5,
    "runningLength": 216.8914585940119,
    "vector": Array [
      -0.5464686003228649,
      0.83747959310133,
    ],
  },
  Object {
    "distance": 3.880369695376023,
    "point": Array [
      120.89589590725652,
      -184.24474852030713,
    ],
    "pressure": 0.5,
    "runningLength": 220.77182828938794,
    "vector": Array [
      -0.5914313329237613,
      0.8063553673387579,
    ],
  },
  Object {
    "distance": 3.117635857377414,
    "point": Array [
      122.62876531577997,
      -186.83643078328015,
    ],
    "pressure": 0.5,
    "runningLength": 223.88946414676536,
    "vector": Array [
      -0.5558280337400157,
      0.8312972975468572,
    ],
  },
  Object {
    "distance": 2.335507224695227,
    "point": Array [
      124.00943056969786,
      -188.7201392143351,
    ],
    "pressure": 0.5,
    "runningLength": 226.22497137146058,
    "vector": Array [
      -0.5911629128435059,
      0.8065521746783535,
    ],
  },
  Object {
    "distance": 1.650340326846049,
    "point": Array [
      124.78546828826619,
      -190.17663797979066,
    ],
    "pressure": 0.5,
    "runningLength": 227.87531169830663,
    "vector": Array [
      -0.47022890124209193,
      0.88254449204369,
    ],
  },
  Object {
    "distance": 1.1547058496777627,
    "point": Array [
      125.6044379961519,
      -190.99066145417308,
    ],
    "pressure": 0.5,
    "runningLength": 229.0300175479844,
    "vector": Array [
      -0.7092453096295122,
      0.7049617654657147,
    ],
  },
  Object {
    "distance": 0.6396555737788303,
    "point": Array [
      126.08574799152834,
      -191.41196887330673,
    ],
    "pressure": 0.5,
    "runningLength": 229.66967312176322,
    "vector": Array [
      -0.7524518117352551,
      0.6586473039619403,
    ],
  },
  Object {
    "distance": 0.3304607350685049,
    "point": Array [
      126.33837384612217,
      -191.62500519653062,
    ],
    "pressure": 0.5,
    "runningLength": 230.00013385683172,
    "vector": Array [
      -0.7644655712015554,
      0.6446645565311309,
    ],
  },
  Object {
    "distance": 1.565019935759946,
    "point": Array [
      126.4666819162367,
      -190.0652537937521,
    ],
    "pressure": 0.5,
    "runningLength": 231.56515379259167,
    "vector": Array [
      -0.08198494292804259,
      -0.9966335681347912,
    ],
  },
  Object {
    "distance": 2.725017094699754,
    "point": Array [
      126.53116847509688,
      -187.34099983163105,
    ],
    "pressure": 0.5,
    "runningLength": 234.29017088729142,
    "vector": Array [
      -0.02366464378722987,
      -0.9997199531040798,
    ],
  },
  Object {
    "distance": 3.769661729040943,
    "point": Array [
      126.56346717516078,
      -183.57147647378193,
    ],
    "pressure": 0.5,
    "runningLength": 238.05983261633236,
    "vector": Array [
      -0.008568063233653016,
      -0.9999632934725275,
    ],
  },
  Object {
    "distance": 5.202686167916566,
    "point": Array [
      126.57962576196505,
      -178.36881539872593,
    ],
    "pressure": 0.5,
    "runningLength": 243.26251878424893,
    "vector": Array [
      -0.0031058161654861395,
      -0.9999951769413421,
    ],
  },
  Object {
    "distance": 6.9043184991324225,
    "point": Array [
      126.5877065948292,
      -171.46450162850934,
    ],
    "pressure": 0.5,
    "runningLength": 250.16683728338134,
    "vector": Array [
      -0.0011704026784349264,
      -0.9999993150785507,
    ],
  },
  Object {
    "distance": 8.752655023247039,
    "point": Array [
      126.5917472678383,
      -162.71184753795296,
    ],
    "pressure": 0.5,
    "runningLength": 258.9194923066284,
    "vector": Array [
      -0.0004616511216732172,
      -0.9999998934391153,
    ],
  },
  Object {
    "distance": 10.708725874484832,
    "point": Array [
      125.76043431377238,
      -152.0354376251001,
    ],
    "pressure": 0.5,
    "runningLength": 269.62821818111325,
    "vector": Array [
      0.0776294924167077,
      -0.9969822776294093,
    ],
  },
  Object {
    "distance": 17.422406859059564,
    "point": Array [
      123.12255562164432,
      -134.81388552407788,
    ],
    "pressure": 0.5,
    "runningLength": 287.0506250401728,
    "vector": Array [
      0.15140724892188887,
      -0.988471468973134,
    ],
  },
  Object {
    "distance": 14.561510437097,
    "point": Array [
      120.59991257306442,
      -120.47255161613415,
    ],
    "pressure": 0.5,
    "runningLength": 301.6121354772698,
    "vector": Array [
      0.17324047937727713,
      -0.9848795542121539,
    ],
  },
  Object {
    "distance": 15.527546171741333,
    "point": Array [
      117.47130709835518,
      -105.26345835259019,
    ],
    "pressure": 0.5,
    "runningLength": 317.13968164901115,
    "vector": Array [
      0.20148743659207394,
      -0.9794910989363583,
    ],
  },
  Object {
    "distance": 16.73867804244416,
    "point": Array [
      114.34579036926401,
      -88.81917400255618,
    ],
    "pressure": 0.5,
    "runningLength": 333.87835969145533,
    "vector": Array [
      0.18672422763409519,
      -0.982412369025579,
    ],
  },
  Object {
    "distance": 18.36338397944533,
    "point": Array [
      110.8561630060957,
      -70.79040887449551,
    ],
    "pressure": 0.5,
    "runningLength": 352.24174367090063,
    "vector": Array [
      0.19003182458496493,
      -0.9817779309217076,
    ],
  },
  Object {
    "distance": 18.12075447527331,
    "point": Array [
      107.12353782474105,
      -53.05825581829123,
    ],
    "pressure": 0.5,
    "runningLength": 370.36249814617395,
    "vector": Array [
      0.20598619039003074,
      -0.9785548984950216,
    ],
  },
  Object {
    "distance": 18.233233232246615,
    "point": Array [
      103.25925665076868,
      -35.23921754149343,
    ],
    "pressure": 0.5,
    "runningLength": 388.59573137842057,
    "vector": Array [
      0.2119361456495905,
      -0.9772835157553798,
    ],
  },
  Object {
    "distance": 17.018654599272967,
    "point": Array [
      99.74412129989996,
      -18.587538111645284,
    ],
    "pressure": 0.5,
    "runningLength": 405.61438597769353,
    "vector": Array [
      0.20654601868580633,
      -0.9784368871649527,
    ],
  },
  Object {
    "distance": 15.229288980181032,
    "point": Array [
      97.30605449715185,
      -3.5546716814796433,
    ],
    "pressure": 0.5,
    "runningLength": 420.84367495787455,
    "vector": Array [
      0.16009065202721823,
      -0.9871023164462235,
    ],
  },
  Object {
    "distance": 14.21687259741324,
    "point": Array [
      95.14027124122549,
      10.496265986143415,
    ],
    "pressure": 0.5,
    "runningLength": 435.06054755528777,
    "vector": Array [
      0.15233893678701327,
      -0.9883283099955209,
    ],
  },
  Object {
    "distance": 13.689245709087723,
    "point": Array [
      93.06625463750358,
      24.02748556204501,
    ],
    "pressure": 0.5,
    "runningLength": 448.7497932643755,
    "vector": Array [
      0.15150700395019293,
      -0.9884561840334838,
    ],
  },
  Object {
    "distance": 12.538183522614492,
    "point": Array [
      91.44739217301618,
      36.46072047367743,
    ],
    "pressure": 0.5,
    "runningLength": 461.28797678699,
    "vector": Array [
      0.12911459315996865,
      -0.9916296797863282,
    ],
  },
  Object {
    "distance": 10.948805015174292,
    "point": Array [
      90.54098524700142,
      47.371942116773965,
    ],
    "pressure": 0.5,
    "runningLength": 472.2367818021643,
    "vector": Array [
      0.08278592273390108,
      -0.9965673539691617,
    ],
  },
  Object {
    "distance": 10.027267524431865,
    "point": Array [
      89.65495250169886,
      57.35998696953557,
    ],
    "pressure": 0.5,
    "runningLength": 482.26404932659614,
    "vector": Array [
      0.08836233232470371,
      -0.9960883988010998,
    ],
  },
  Object {
    "distance": 9.513386276277851,
    "point": Array [
      89.13979791533168,
      66.8594150677853,
    ],
    "pressure": 0.5,
    "runningLength": 491.777435602874,
    "vector": Array [
      0.054150496091149,
      -0.9985327855273869,
    ],
  },
  Object {
    "distance": 7.172350433914567,
    "point": Array [
      88.87019758652882,
      74.02669672888834,
    ],
    "pressure": 0.5,
    "runningLength": 498.94978603678857,
    "vector": Array [
      0.03758883943094263,
      -0.999293289855503,
    ],
  },
  Object {
    "distance": 6.071443554005107,
    "point": Array [
      88.7333935828575,
      80.09659882810293,
    ],
    "pressure": 0.5,
    "runningLength": 505.02122959079367,
    "vector": Array [
      0.0225323685305566,
      -0.9997461139551396,
    ],
  },
  Object {
    "distance": 5.949724987408091,
    "point": Array [
      88.66465760781017,
      86.04592675582069,
    ],
    "pressure": 0.5,
    "runningLength": 510.97095457820177,
    "vector": Array [
      0.011552798691167031,
      -0.9999332641943668,
    ],
  },
  Object {
    "distance": 5.543833652295783,
    "point": Array [
      88.63023395808457,
      91.58965353269802,
    ],
    "pressure": 0.5,
    "runningLength": 516.5147882304975,
    "vector": Array [
      0.006209358340205783,
      -0.9999807217486759,
    ],
  },
  Object {
    "distance": 4.450073845575353,
    "point": Array [
      88.6130128561881,
      96.03969405663972,
    ],
    "pressure": 0.5,
    "runningLength": 520.9648620760729,
    "vector": Array [
      0.0038698463203234532,
      -0.9999925121166943,
    ],
  },
  Object {
    "distance": 3.754726327881847,
    "point": Array [
      88.60440075906762,
      99.79441050786107,
    ],
    "pressure": 0.5,
    "runningLength": 524.7195884039547,
    "vector": Array [
      0.0022936683977574854,
      -0.9999973695391811,
    ],
  },
  Object {
    "distance": 2.5489778947451303,
    "point": Array [
      88.60009445281197,
      102.3433847650135,
    ],
    "pressure": 0.5,
    "runningLength": 527.2685662986999,
    "vector": Array [
      0.0016894247158912102,
      -0.9999985729210463,
    ],
  },
  Object {
    "distance": 2.2197575114820243,
    "point": Array [
      88.59794125673494,
      104.56314123218,
    ],
    "pressure": 0.5,
    "runningLength": 529.4883238101819,
    "vector": Array [
      0.0009700140965371526,
      -0.9999995295362155,
    ],
  },
  Object {
    "distance": 1.2674235806062357,
    "point": Array [
      88.59686465153823,
      105.83056435552831,
    ],
    "pressure": 0.5,
    "runningLength": 530.7557473907881,
    "vector": Array [
      0.0008494438743204543,
      -0.999999639222487,
    ],
  },
  Object {
    "distance": 0.6599692628353817,
    "point": Array [
      88.59632634774681,
      106.49053339882997,
    ],
    "pressure": 0.5,
    "runningLength": 531.4157166536235,
    "vector": Array [
      0.0008156497911782285,
      -0.9999996673576537,
    ],
  },
  Object {
    "distance": 0.7510274834846138,
    "point": Array [
      88.59605719565228,
      107.24156083408542,
    ],
    "pressure": 0.5,
    "runningLength": 532.166744137108,
    "vector": Array [
      0.00035837848873801785,
      -0.9999999357824273,
    ],
  },
  Object {
    "distance": 0.4456875568795251,
    "point": Array [
      88.59592261957188,
      107.68724837064721,
    ],
    "pressure": 0.5,
    "runningLength": 532.6124316939876,
    "vector": Array [
      0.0003019516213124874,
      -0.9999999544126082,
    ],
  },
  Object {
    "distance": 0.18212727432675924,
    "point": Array [
      88.59585533152615,
      107.50512110875044,
    ],
    "pressure": 0.5,
    "runningLength": 532.7945589683143,
    "vector": Array [
      0.00036945617275634563,
      0.9999999317510657,
    ],
  },
  Object {
    "distance": 2.241892136230439,
    "point": Array [
      88.59582168750237,
      105.26322897277245,
    ],
    "pressure": 0.5,
    "runningLength": 535.0364511045448,
    "vector": Array [
      0.00001500697702786452,
      0.9999999998873954,
    ],
  },
  Object {
    "distance": 4.474374632760612,
    "point": Array [
      87.76247153215702,
      100.86714482061186,
    ],
    "pressure": 0.5,
    "runningLength": 539.5108257373054,
    "vector": Array [
      0.1862495261893572,
      0.9825024753120167,
    ],
  },
  Object {
    "distance": 6.3397797329959795,
    "point": Array [
      85.9569075655954,
      94.78991306383634,
    ],
    "pressure": 0.5,
    "runningLength": 545.8506054703014,
    "vector": Array [
      0.2847991637886714,
      0.9585872085028434,
    ],
  },
  Object {
    "distance": 7.808081101959065,
    "point": Array [
      83.57264410083312,
      87.35476557199934,
    ],
    "pressure": 0.5,
    "runningLength": 553.6586865722604,
    "vector": Array [
      0.3053584400095521,
      0.9522374825194253,
    ],
  },
  Object {
    "distance": 8.629968751089134,
    "point": Array [
      80.88359878820506,
      79.15443655717267,
    ],
    "pressure": 0.5,
    "runningLength": 562.2886553233495,
    "vector": Array [
      0.31159386437971587,
      0.9502153775228621,
    ],
  },
  Object {
    "distance": 10.12222825617859,
    "point": Array [
      77.20625720184988,
      69.7238128382746,
    ],
    "pressure": 0.5,
    "runningLength": 572.4108835795281,
    "vector": Array [
      0.36329368329651535,
      0.9316746748070655,
    ],
  },
  Object {
    "distance": 11.68816886848387,
    "point": Array [
      73.31211658699874,
      58.70342444357805,
    ],
    "pressure": 0.5,
    "runningLength": 584.099052448012,
    "vector": Array [
      0.33316943472226435,
      0.9428669724658123,
    ],
  },
  Object {
    "distance": 13.44344510162001,
    "point": Array [
      68.10580130929426,
      46.30905082368858,
    ],
    "pressure": 0.5,
    "runningLength": 597.542497549632,
    "vector": Array [
      0.3872753775798948,
      0.9219640892791595,
    ],
  },
  Object {
    "distance": 13.02398356854902,
    "point": Array [
      62.87610284206222,
      34.38116744332031,
    ],
    "pressure": 0.5,
    "runningLength": 610.5664811181811,
    "vector": Array [
      0.4015436935793585,
      0.9158398670873888,
    ],
  },
  Object {
    "distance": 12.596939099421707,
    "point": Array [
      57.74016347038288,
      22.87877632473225,
    ],
    "pressure": 0.5,
    "runningLength": 623.1634202176027,
    "vector": Array [
      0.40771328107120186,
      0.9131100045657998,
    ],
  },
  Object {
    "distance": 12.899937844341142,
    "point": Array [
      52.252012094866,
      11.204505860704234,
    ],
    "pressure": 0.5,
    "runningLength": 636.0633580619439,
    "vector": Array [
      0.425440141010012,
      0.9049865669817321,
    ],
  },
  Object {
    "distance": 12.41448098549218,
    "point": Array [
      47.35457279216135,
      -0.20314185543210606,
    ],
    "pressure": 0.5,
    "runningLength": 648.4778390474361,
    "vector": Array [
      0.39449408383869583,
      0.9188984806910216,
    ],
  },
  Object {
    "distance": 11.30531491413528,
    "point": Array [
      42.880292538317995,
      -10.585384460853973,
    ],
    "pressure": 0.5,
    "runningLength": 659.7831539615713,
    "vector": Array [
      0.39576785678469373,
      0.9183505885750006,
    ],
  },
  Object {
    "distance": 10.225333627854974,
    "point": Array [
      38.63889231098114,
      -19.889575554790547,
    ],
    "pressure": 0.5,
    "runningLength": 670.0084875894263,
    "vector": Array [
      0.4147933340563868,
      0.9099156499491514,
    ],
  },
  Object {
    "distance": 9.978508190099829,
    "point": Array [
      34.517482180576856,
      -28.977182733629775,
    ],
    "pressure": 0.5,
    "runningLength": 679.9869957795261,
    "vector": Array [
      0.41302868644166074,
      0.9107180157305971,
    ],
  },
  Object {
    "distance": 8.973033064550997,
    "point": Array [
      30.873325445918734,
      -37.17690492836121,
    ],
    "pressure": 0.5,
    "runningLength": 688.9600288440771,
    "vector": Array [
      0.4061231813638115,
      0.913818341662574,
    ],
  },
  Object {
    "distance": 7.01240777703766,
    "point": Array [
      27.954005133680344,
      -43.55275245994559,
    ],
    "pressure": 0.5,
    "runningLength": 695.9724366211148,
    "vector": Array [
      0.41630783677438055,
      0.909223726615312,
    ],
  },
  Object {
    "distance": 5.789978622412295,
    "point": Array [
      25.47813798674293,
      -48.786673964774195,
    ],
    "pressure": 0.5,
    "runningLength": 701.762415243527,
    "vector": Array [
      0.42761248501913934,
      0.9039621466940727,
    ],
  },
  Object {
    "distance": 5.516800367191504,
    "point": Array [
      23.237503248137838,
      -53.827967673694594,
    ],
    "pressure": 0.5,
    "runningLength": 707.2792156107186,
    "vector": Array [
      0.4061475111425421,
      0.9138075285270517,
    ],
  },
  Object {
    "distance": 5.814390207599671,
    "point": Array [
      20.283402351312574,
      -58.836003354239125,
    ],
    "pressure": 0.5,
    "runningLength": 713.0936058183182,
    "vector": Array [
      0.5080671904276599,
      0.861317438585185,
    ],
  },
  Object {
    "distance": 4.349023318437064,
    "point": Array [
      18.084054648312822,
      -62.58791933219213,
    ],
    "pressure": 0.5,
    "runningLength": 717.4426291367553,
    "vector": Array [
      0.5057107175479909,
      0.8627031182029518,
    ],
  },
  Object {
    "distance": 3.567478149401034,
    "point": Array [
      16.030664587715105,
      -65.50519367744873,
    ],
    "pressure": 0.5,
    "runningLength": 721.0101072861563,
    "vector": Array [
      0.5755858829695911,
      0.8177413352192221,
    ],
  },
  Object {
    "distance": 2.3671868893904557,
    "point": Array [
      14.845016855899928,
      -67.55405024279038,
    ],
    "pressure": 0.5,
    "runningLength": 723.3772941755468,
    "vector": Array [
      0.5008678178850838,
      0.8655237888163645,
    ],
  },
  Object {
    "distance": 1.8555894127361436,
    "point": Array [
      13.809034206406286,
      -69.09351509091346,
    ],
    "pressure": 0.5,
    "runningLength": 725.2328835882829,
    "vector": Array [
      0.5583038156948968,
      0.8296365766891662,
    ],
  },
  Object {
    "distance": 1.4031673450024083,
    "point": Array [
      13.21718308439511,
      -70.36575360921701,
    ],
    "pressure": 0.5,
    "runningLength": 726.6360509332853,
    "vector": Array [
      0.42179653347773755,
      0.90669051188714,
    ],
  },
  Object {
    "distance": 0.7830851504552896,
    "point": Array [
      12.90894755717881,
      -71.0856238840758,
    ],
    "pressure": 0.5,
    "runningLength": 727.4191360837406,
    "vector": Array [
      0.39361687172473003,
      0.9192745826430955,
    ],
  },
  Object {
    "distance": 0.684059676910568,
    "point": Array [
      12.336111465868873,
      -71.459517524123,
    ],
    "pressure": 0.5,
    "runningLength": 728.1031957606511,
    "vector": Array [
      0.8374066044896067,
      0.5465804412501305,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a line with a single point: get-stroke-points-one-point 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      464.91,
      286.51,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      1,
      1,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a line with duplicates: get-stroke-points-with-duplicates 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      0,
      0,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 11.785113019775794,
    "point": Array [
      8.333333333333334,
      8.333333333333334,
    ],
    "pressure": 0.5,
    "runningLength": 11.785113019775794,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 1.9641855032959634,
    "point": Array [
      9.722222222222221,
      9.722222222222221,
    ],
    "pressure": 0.5,
    "runningLength": 13.749298523071758,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 0.3273642505493293,
    "point": Array [
      9.953703703703704,
      9.953703703703704,
    ],
    "pressure": 0.5,
    "runningLength": 14.076662773621088,
    "vector": Array [
      -0.7071067811865476,
      -0.7071067811865476,
    ],
  },
  Object {
    "distance": 0.054560708424888645,
    "point": Array [
      9.992283950617285,
      9.992283950617285,
    ],
    "pressure": 0.5,
    "runningLength": 14.131223482045977,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 0.009093451404146014,
    "point": Array [
      9.998713991769547,
      9.998713991769547,
    ],
    "pressure": 0.5,
    "runningLength": 14.140316933450123,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 106.06753275321616,
    "point": Array [
      84.99978566529492,
      84.99978566529492,
    ],
    "pressure": 0.5,
    "runningLength": 120.20784968666628,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 17.67792212553603,
    "point": Array [
      97.49996427754915,
      97.49996427754915,
    ],
    "pressure": 0.5,
    "runningLength": 137.8857718122023,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 2.9463203542560015,
    "point": Array [
      99.58332737959152,
      99.58332737959152,
    ],
    "pressure": 0.5,
    "runningLength": 140.8320921664583,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 0.49105339237599355,
    "point": Array [
      99.93055456326525,
      99.93055456326525,
    ],
    "pressure": 0.5,
    "runningLength": 141.32314555883428,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 0.08184223206266894,
    "point": Array [
      99.9884257605442,
      99.9884257605442,
    ],
    "pressure": 0.5,
    "runningLength": 141.40498779089694,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 0.013640372010451523,
    "point": Array [
      99.9980709600907,
      99.9980709600907,
    ],
    "pressure": 0.5,
    "runningLength": 141.4186281629074,
    "vector": Array [
      -0.7071067811865475,
      -0.7071067811865475,
    ],
  },
  Object {
    "distance": 117.84885680242286,
    "point": Array [
      16.666345160015112,
      16.666345160015112,
    ],
    "pressure": 0.5,
    "runningLength": 259.26748496533025,
    "vector": Array [
      0.7071067811865475,
      0.7071067811865475,
    ],
  },
  Object {
    "distance": 19.641476133737136,
    "point": Array [
      2.7777241933358514,
      2.7777241933358514,
    ],
    "pressure": 0.5,
    "runningLength": 278.90896109906737,
    "vector": Array [
      0.7071067811865476,
      0.7071067811865476,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a line with no points: get-stroke-points-no-points 1`] = `Array []`;

exports[`getStrokePoints get stroke points from a line with two equal points: get-stroke-points-two-equal-points 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      1,
      1,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      1,
      1,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a line with two points: get-stroke-points-two-point 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      10,
      200,
    ],
    "pressure": 0.25,
    "runningLength": 0,
    "vector": Array [
      1,
      1,
    ],
  },
]
`;

exports[`getStrokePoints get stroke points from a object input points: get-stroke-points-object-pairs 1`] = `
Array [
  Object {
    "distance": 0,
    "point": Array [
      0,
      0,
    ],
    "pressure": 0.5,
    "runningLength": 0,
    "vector": Array [
      -1,
      0,
    ],
  },
  Object {
    "distance": 16.666666666666668,
    "point": Array [
      16.666666666666668,
      0,
    ],
    "pressure": 0.5,
    "runningLength": 16.666666666666668,
    "vector": Array [
      -1,
      0,
    ],
  },
  Object {
    "distance": 8.09854429839625,
    "point": Array [
      23.61111111111111,
      4.166666666666667,
    ],
    "pressure": 0.5,
    "runningLength": 24.76521096506292,
    "vector": Array [
      -0.857492925712544,
      -0.5144957554275266,
    ],
  },
  Object {
    "distance": 5.369172918862592,
    "point": Array [
      28.935185185185183,
      4.861111111111111,
    ],
    "pressure": 0.5,
    "runningLength": 30.134383883925512,
    "vector": Array [
      -0.9916004111862218,
      -0.12933918406776795,
    ],
  },
]
`;
